Sun Jun 06 15:14:32 GMT 2010  Richard Boulton <richard@tartarus.org>

	* docs/geospatial.rst,geospatial/latlong_metrics.cc,
	  include/xapian/geospatial.h: Correct capitalisation of "earth" to
	  "Earth".

Sun Jun 06 15:04:42 GMT 2010  Richard Boulton <richard@tartarus.org>

	* Makefile.am,api/omqueryinternal.cc,api/postingsource.cc,
	  api/registry.cc,common/output.h,common/registryinternal.h,
	  docs/geospatial.rst,geospatial/,include/Makefile.mk,include/xapian.h,
	  include/xapian/geospatial.h,include/xapian/postingsource.h,
	  include/xapian/registry.h,tests/Makefile.am,tests/api_geospatial.cc:
	  Apply patch geospatial_clean3.patch from ticket #481: adds basic
	  geospatial search support.

Sun Jun 06 04:34:13 GMT 2010  Olly Betts <olly@survex.com>

	* bin/Makefile.mk,configure.ac: Fix build failures with some
	  combinations of backends disabled (partially addresses ticket#361).

Sat Jun 05 16:30:57 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/remotesubmatch.cc: Add missing parameter of
	  RemoteSubMatch::start_match() to debug logging.

Sat Jun 05 15:03:56 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/queryoptimiser.h: Make QueryOptimiser::optimise_query()'s
	  argument const pointer, since we only pass it to do_subquery() which
	  takes a const pointer.

Fri Jun 04 16:05:01 GMT 2010  Olly Betts <olly@survex.com>

	* common/rset.h: Just keep a reference to the set<docid> from the
	  Xapian::RSet object rather than copying it (since we now only
	  create the RSetI object transiently, so the Xapian::RSet object
	  is definitely valid for its whole lifetime).

Fri Jun 04 15:57:50 GMT 2010  Olly Betts <olly@survex.com>

	* api/omenquire.cc,matcher/localmatch.cc,matcher/localmatch.h: Keep
	  a Xapian::RSet handle in the LocalSubMatch object and only create
	  an RSetI object briefly in LocalSubMatch::prepare_match().

Fri Jun 04 15:36:45 GMT 2010  Olly Betts <olly@survex.com>

	* common/pretty.h: RSetI objects are no longer passed as parameters